# chatbot

./: README.md  crawling.py  pyproject.toml  test.ipynb
past_trial/: test.ipynb
reference/: example.json
src/: __init__.py  crawl.py  crawl_utils.py  tool.py  utils.py
src/crawler/: crawl.py  crawl_utils.py
